src/theme.css
[data-theme='dicething'] {
	--text-scaling: 1.067;
	--base-font-color: var(--color-surface-950);
	--base-font-color-dark: var(--color-surface-50);
	--base-font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
	--base-font-size: inherit;
	--base-line-height: inherit;
	--base-font-weight: normal;
	--base-font-style: normal;
	--base-letter-spacing: 0em;
	--heading-font-color: inherit;
	--heading-font-color-dark: inherit;
	--heading-font-family: inherit;
	--heading-font-weight: bold;
	--heading-font-style: normal;
	--heading-letter-spacing: inherit;
	--anchor-font-color: var(--color-primary-500);
	--anchor-font-color-dark: var(--color-primary-500);
	--anchor-font-family: inherit;
	--anchor-font-size: inherit;
	--anchor-line-height: inherit;
	--anchor-font-weight: inherit;
	--anchor-font-style: inherit;
	--anchor-letter-spacing: inherit;
	--anchor-text-decoration: none;
	--anchor-text-decoration-hover: underline;
	--anchor-text-decoration-active: none;
	--anchor-text-decoration-focus: none;
	--spacing: 0.25rem;
	--radius-base: 0.25rem;
	--radius-container: 0.375rem;
	--default-border-width: 2px;
	--default-divide-width: 2px;
	--default-ring-width: 1px;
	--body-background-color: var(--color-surface-50);
	--body-background-color-dark: var(--color-surface-700);

	--color-primary-50: oklch(95.51% 0.07 196.05deg);
	--color-primary-100: oklch(90.89% 0.09 195.67deg);
	--color-primary-200: oklch(86.76% 0.11 195.31deg);
	--color-primary-300: oklch(82.72% 0.12 195.03deg);
	--color-primary-400: oklch(79.3% 0.13 194.84deg);
	--color-primary-500: oklch(75.96% 0.13 194.76deg);
	--color-primary-600: oklch(69.17% 0.12 195.47deg);
	--color-primary-700: oklch(62.17% 0.11 195.57deg);
	--color-primary-800: oklch(55.27% 0.09 195.7deg);
	--color-primary-900: oklch(47.83% 0.08 195.89deg);
	--color-primary-950: oklch(40.12% 0.07 197.59deg);

	--color-primary-contrast-dark: var(--color-primary-950);
	--color-primary-contrast-light: var(--color-primary-50);
	--color-primary-contrast-50: var(--color-primary-contrast-dark);
	--color-primary-contrast-100: var(--color-primary-contrast-dark);
	--color-primary-contrast-200: var(--color-primary-contrast-dark);
	--color-primary-contrast-300: var(--color-primary-contrast-dark);
	--color-primary-contrast-400: var(--color-primary-contrast-dark);
	--color-primary-contrast-500: var(--color-primary-contrast-dark);
	--color-primary-contrast-600: var(--color-primary-contrast-dark);
	--color-primary-contrast-700: var(--color-primary-contrast-dark);
	--color-primary-contrast-800: var(--color-primary-contrast-light);
	--color-primary-contrast-900: var(--color-primary-contrast-light);
	--color-primary-contrast-950: var(--color-primary-contrast-light);

	--color-secondary-50: oklch(98.06% 0.11 108.24deg);
	--color-secondary-100: oklch(96.56% 0.14 106.51deg);
	--color-secondary-200: oklch(95.17% 0.16 105.35deg);
	--color-secondary-300: oklch(94.11% 0.18 104.63deg);
	--color-secondary-400: oklch(92.95% 0.19 103.36deg);
	--color-secondary-500: oklch(91.88% 0.19 101.78deg);
	--color-secondary-600: oklch(84.55% 0.18 102.02deg);
	--color-secondary-700: oklch(77.05% 0.16 102.33deg);
	--color-secondary-800: oklch(69.37% 0.15 102.72deg);
	--color-secondary-900: oklch(61.47% 0.13 103.23deg);
	--color-secondary-950: oklch(53.31% 0.11 103.94deg);

	--color-secondary-contrast-dark: var(--color-secondary-950);
	--color-secondary-contrast-light: var(--color-secondary-50);
	--color-secondary-contrast-50: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-100: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-200: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-300: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-400: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-500: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-600: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-700: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-800: var(--color-secondary-contrast-light);
	--color-secondary-contrast-900: var(--color-secondary-contrast-light);
	--color-secondary-contrast-950: var(--color-secondary-contrast-light);
	--color-tertiary-50: oklch(100% 0 none);
	--color-tertiary-100: oklch(94.56% 0.03 305.4deg);
	--color-tertiary-200: oklch(89.34% 0.06 304.33deg);
	--color-tertiary-300: oklch(83.98% 0.1 303.88deg);
	--color-tertiary-400: oklch(78.89% 0.13 302.96deg);
	--color-tertiary-500: oklch(73.75% 0.16 302.15deg);
	--color-tertiary-600: oklch(66.38% 0.16 300.98deg);
	--color-tertiary-700: oklch(58.67% 0.16 299.8deg);
	--color-tertiary-800: oklch(51.07% 0.16 298.57deg);
	--color-tertiary-900: oklch(43.06% 0.16 296.5deg);
	--color-tertiary-950: oklch(35.13% 0.16 293.06deg);
	--color-tertiary-contrast-dark: var(--color-tertiary-950);
	--color-tertiary-contrast-light: var(--color-tertiary-50);
	--color-tertiary-contrast-50: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-100: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-200: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-300: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-400: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-500: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-600: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-700: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-800: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-900: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-950: var(--color-tertiary-contrast-light);
	--color-success-50: oklch(93.87% 0.13 137.37deg);
	--color-success-100: oklch(90% 0.16 141.34deg);
	--color-success-200: oklch(86.54% 0.2 143.18deg);
	--color-success-300: oklch(83.25% 0.23 143.94deg);
	--color-success-400: oklch(80.73% 0.25 143.83deg);
	--color-success-500: oklch(78.68% 0.26 143.27deg);
	--color-success-600: oklch(71.99% 0.24 143.19deg);
	--color-success-700: oklch(65.14% 0.22 143.08deg);
	--color-success-800: oklch(58.1% 0.19 142.94deg);
	--color-success-900: oklch(50.85% 0.17 142.79deg);
	--color-success-950: oklch(43.3% 0.15 142.5deg);
	--color-success-contrast-dark: var(--color-success-950);
	--color-success-contrast-light: var(--color-success-50);
	--color-success-contrast-50: var(--color-success-contrast-dark);
	--color-success-contrast-100: var(--color-success-contrast-dark);
	--color-success-contrast-200: var(--color-success-contrast-dark);
	--color-success-contrast-300: var(--color-success-contrast-dark);
	--color-success-contrast-400: var(--color-success-contrast-dark);
	--color-success-contrast-500: var(--color-success-contrast-dark);
	--color-success-contrast-600: var(--color-success-contrast-dark);
	--color-success-contrast-700: var(--color-success-contrast-dark);
	--color-success-contrast-800: var(--color-success-contrast-dark);
	--color-success-contrast-900: var(--color-success-contrast-light);
	--color-success-contrast-950: var(--color-success-contrast-light);
	--color-warning-50: oklch(81.24% 0.14 67.56deg);
	--color-warning-100: oklch(79.1% 0.15 65.29deg);
	--color-warning-200: oklch(77.14% 0.16 62.35deg);
	--color-warning-300: oklch(75.3% 0.17 60.16deg);
	--color-warning-400: oklch(73.49% 0.17 56.75deg);
	--color-warning-500: oklch(71.63% 0.18 53.51deg);
	--color-warning-600: oklch(67.41% 0.18 50.81deg);
	--color-warning-700: oklch(62.87% 0.17 47.75deg);
	--color-warning-800: oklch(58.61% 0.17 44.8deg);
	--color-warning-900: oklch(54.05% 0.16 41.56deg);
	--color-warning-950: oklch(49.8% 0.16 38.55deg);
	--color-warning-contrast-dark: var(--color-warning-950);
	--color-warning-contrast-light: var(--color-warning-50);
	--color-warning-contrast-50: var(--color-warning-contrast-dark);
	--color-warning-contrast-100: var(--color-warning-contrast-dark);
	--color-warning-contrast-200: var(--color-warning-contrast-dark);
	--color-warning-contrast-300: var(--color-warning-contrast-dark);
	--color-warning-contrast-400: var(--color-warning-contrast-dark);
	--color-warning-contrast-500: var(--color-warning-contrast-dark);
	--color-warning-contrast-600: var(--color-warning-contrast-dark);
	--color-warning-contrast-700: var(--color-warning-contrast-light);
	--color-warning-contrast-800: var(--color-warning-contrast-light);
	--color-warning-contrast-900: var(--color-warning-contrast-light);
	--color-warning-contrast-950: var(--color-warning-contrast-light);
	--color-error-50: oklch(81.18% 0.12 53.41deg);
	--color-error-100: oklch(75% 0.15 39.17deg);
	--color-error-200: oklch(69.47% 0.18 31.47deg);
	--color-error-300: oklch(65.1% 0.22 27.36deg);
	--color-error-400: oklch(62.08% 0.24 26.63deg);
	--color-error-500: oklch(60.63% 0.25 27.42deg);
	--color-error-600: oklch(56.84% 0.23 27.04deg);
	--color-error-700: oklch(53.19% 0.22 26.4deg);
	--color-error-800: oklch(49.28% 0.2 25.7deg);
	--color-error-900: oklch(45.5% 0.18 24.52deg);
	--color-error-950: oklch(41.43% 0.17 23.09deg);
	--color-error-contrast-dark: #fff; /* var(--color-error-950); */
	--color-error-contrast-light: #fff; /* var(--color-error-50); */
	--color-error-contrast-50: var(--color-error-contrast-dark);
	--color-error-contrast-100: var(--color-error-contrast-dark);
	--color-error-contrast-200: var(--color-error-contrast-dark);
	--color-error-contrast-300: var(--color-error-contrast-dark);
	--color-error-contrast-400: var(--color-error-contrast-dark);
	--color-error-contrast-500: var(--color-error-contrast-light);
	--color-error-contrast-600: var(--color-error-contrast-light);
	--color-error-contrast-700: var(--color-error-contrast-light);
	--color-error-contrast-800: var(--color-error-contrast-light);
	--color-error-contrast-900: var(--color-error-contrast-light);
	--color-error-contrast-950: var(--color-error-contrast-light);
	--color-surface-50: oklch(100% 0 none);
	--color-surface-100: oklch(90.67% 0 none);
	--color-surface-200: oklch(81.41% 0 none);
	--color-surface-300: oklch(71.55% 0 none);
	--color-surface-400: oklch(61.67% 0 none);
	--color-surface-500: oklch(51.03% 0 none);
	--color-surface-600: oklch(44.95% 0 none);
	--color-surface-700: oklch(38.67% 0 none);
	--color-surface-800: oklch(32.11% 0 none);
	--color-surface-900: oklch(25.2% 0 none);
	--color-surface-950: oklch(17.76% 0 none);
	--color-surface-contrast-dark: var(--color-surface-950);
	--color-surface-contrast-light: var(--color-surface-50);
	--color-surface-contrast-50: var(--color-surface-contrast-dark);
	--color-surface-contrast-100: var(--color-surface-contrast-dark);
	--color-surface-contrast-200: var(--color-surface-contrast-dark);
	--color-surface-contrast-300: var(--color-surface-contrast-dark);
	--color-surface-contrast-400: var(--color-surface-contrast-light);
	--color-surface-contrast-500: var(--color-surface-contrast-light);
	--color-surface-contrast-600: var(--color-surface-contrast-light);
	--color-surface-contrast-700: var(--color-surface-contrast-light);
	--color-surface-contrast-800: var(--color-surface-contrast-light);
	--color-surface-contrast-900: var(--color-surface-contrast-light);
	--color-surface-contrast-950: var(--color-surface-contrast-light);
}

